--- a/styles/style.css
+++ b/styles/style.css
@@ -253,6 +253,7 @@ body {
     }
  
     .contenido{
+        margin: 0 5% 0 5%;
         justify-content: center;
         flex-direction: column;
     }
